--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@fontsource/poppins": "^4.5.10",
+    "@mui/icons-material": "^5.10.16",
+    "@mui/lab": "^5.0.0-alpha.110",
     "@mui/material": "^5.10.16",
     "antd": "^5.0.4",
     "bootstrap": "^5.2.3",
+    "font-awesome": "^4.7.0",
     "material-icons": "^1.13.1",
     "next": "13.0.6",
     "react": "18.2.0",
     "react-bootstrap": "^2.6.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-responsive": "^9.0.2"
   }
 }
